--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -1,6 +1,6 @@
 {
-    "componentviewer.formatter.error": "A formatting error occurred: Displaying non-formatted component value.",
     "componentviewer.tooltips.components.empty": "No Components",
     "componentviewer.tooltips.components.header": "Components:",
-    "componentviewer.tooltips.components.value": "Value:"
+    "componentviewer.tooltips.components.value": "Value:",
+    "componentviewer.tooltips.formatter.error": "A formatting error occurred: Displaying non-formatted component value."
 }
