added config support

--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -1,4 +1,26 @@
 {
+    "componentviewer.config.advanced_tooltips.tooltip": "Whether debug option advanced tooltips has to be enabled to display components.",
+    "componentviewer.config.advanced_tooltips": "Advanced Tooltips",
+    "componentviewer.config.changed_components.tooltip": "Whether only changed components will be displayed (like using /data get).",
+    "componentviewer.config.changed_components": "Changed Components",
+    "componentviewer.config.display.always": "Always",
+    "componentviewer.config.display.hold": "Hold",
+    "componentviewer.config.display.never": "Never",
+    "componentviewer.config.display.tooltip": "Specifies the display behavior of components.\n\n\nNever: Components will never be displayed.\n\nHold: Components will be displayed when holding CTRL.\n\nAlways: Components will always be displayed.",
+    "componentviewer.config.display": "Display",
+    "componentviewer.config.ignore_errors.tooltip": "Whether incorrect formatting will still be displayed.\n\n[Mode: Class]",
+    "componentviewer.config.ignore_errors": "Ignore Errors",
+    "componentviewer.config.indent_size.off": "No Formatting",
+    "componentviewer.config.indent_size.tooltip": "Specifies the amount of whitespaces used for indentation. Zero means no formatting occurs.",
+    "componentviewer.config.indent_size.value": "Indent Size: %s",
+    "componentviewer.config.indent_size": "Indent Size",
+    "componentviewer.config.mode.class": "Class",
+    "componentviewer.config.mode.nbt": "NBT",
+    "componentviewer.config.mode.tooltip": "Specifies the display mode of components.\n\n\nNBT: Using a NBT representation.\n\nClass: Using java's built-in representation for classes, records, integers, etc.",
+    "componentviewer.config.mode": "Mode",
+    "componentviewer.config.title": "Component Viewer Config",
+    "componentviewer.keybind.category": "Component Viewer",
+    "componentviewer.keybind.key.config": "Open Config Menu",
     "componentviewer.tooltips.components.empty": "No Components",
     "componentviewer.tooltips.components.header": "Components:",
     "componentviewer.tooltips.components.value": "Value:",
