--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -1,15 +1,13 @@
 {
     "componentviewer.config.advanced_tooltips.tooltip": "Whether debug option advanced tooltips has to be enabled to display components.",
     "componentviewer.config.advanced_tooltips": "Advanced Tooltips",
-    "componentviewer.config.changed_components.tooltip": "Whether only changed components will be displayed (like using /data get).",
-    "componentviewer.config.changed_components": "Changed Components",
+    "componentviewer.config.component_changes.tooltip": "Whether only changed components will be displayed (like using /data get).",
+    "componentviewer.config.component_changes": "Changed Components",
     "componentviewer.config.display.always": "Always",
     "componentviewer.config.display.hold": "Hold",
     "componentviewer.config.display.never": "Never",
     "componentviewer.config.display.tooltip": "Specifies the display behavior of components.\n\n\nNever: Components will never be displayed.\n\nHold: Components will be displayed when holding CTRL.\n\nAlways: Components will always be displayed.",
     "componentviewer.config.display": "Display",
-    "componentviewer.config.ignore_errors.tooltip": "Whether incorrect formatting will still be displayed.\n\n[Mode: Class]",
-    "componentviewer.config.ignore_errors": "Ignore Errors",
     "componentviewer.config.indent_size.off": "No Formatting",
     "componentviewer.config.indent_size.tooltip": "Specifies the amount of whitespaces used for indentation. Zero means no formatting occurs.",
     "componentviewer.config.indent_size.value": "Indent Size: %s",
@@ -20,9 +18,11 @@
     "componentviewer.config.mode": "Mode",
     "componentviewer.config.title": "Component Viewer Config",
     "componentviewer.keybind.category": "Component Viewer",
-    "componentviewer.keybind.key.config": "Open Config Menu",
-    "componentviewer.tooltips.components.empty": "No Components",
+    "componentviewer.keybind.config": "Open Config Menu",
+    "componentviewer.tooltips.components.empty.changed": "No Changed Components",
+    "componentviewer.tooltips.components.empty.general": "No Components",
+    "componentviewer.tooltips.components.error.formatting": "Formatting error: Displaying non-formatted component value",
+    "componentviewer.tooltips.components.error.no_codec": "Internal component: No NBT representation available",
     "componentviewer.tooltips.components.header": "Components:",
-    "componentviewer.tooltips.components.value": "Value:",
-    "componentviewer.tooltips.formatter.error": "A formatting error occurred: Displaying non-formatted component value."
+    "componentviewer.tooltips.components.value": "Value:"
 }
