added colored snbt config and some other changes

--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -1,6 +1,8 @@
 {
     "componentviewer.config.advanced_tooltips.tooltip": "The debug option \"Advanced tooltips\" has to be enabled to display components.",
     "componentviewer.config.advanced_tooltips": "Advanced Tooltips",
+    "componentviewer.config.colored_snbt.tooltip": "Colored SNBT values just like \"/data get\".",
+    "componentviewer.config.colored_snbt": "Colored SNBT",
     "componentviewer.config.component_changes.tooltip": "Only non-default components will be displayed.",
     "componentviewer.config.component_changes": "Component Changes",
     "componentviewer.config.display.always": "Always",
@@ -21,7 +23,7 @@
     "componentviewer.keybind.config": "Open Config Menu",
     "componentviewer.tooltips.components.empty.changes": "No Component Changes",
     "componentviewer.tooltips.components.empty.general": "No Components",
-    "componentviewer.tooltips.components.error.formatting": "Formatting error: Displaying non-formatted component value",
+    "componentviewer.tooltips.components.error.class_formatting": "Class formatting error: Displaying non-formatted value",
     "componentviewer.tooltips.components.error.no_codec": "Internal component: No SNBT representation available",
     "componentviewer.tooltips.components.header.changes": "Component Changes:",
     "componentviewer.tooltips.components.header.general": "Components:",
