--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -1,26 +1,26 @@
 {
-    "componentviewer.config.advanced_tooltips.tooltip": "The debug option \"Advanced tooltips\" has to be enabled to display components.",
     "componentviewer.config.advanced_tooltips": "Advanced Tooltips",
-    "componentviewer.config.colored_snbt.tooltip": "Colored SNBT values just like \"/data get\".",
+    "componentviewer.config.advanced_tooltips.tooltip": "The debug option \"Advanced tooltips\" has to be enabled to display components.",
     "componentviewer.config.colored_snbt": "Colored SNBT",
-    "componentviewer.config.component_changes.tooltip": "Only non-default components will be displayed.",
+    "componentviewer.config.colored_snbt.tooltip": "Colored SNBT values just like \"/data get\".",
     "componentviewer.config.component_changes": "Component Changes",
+    "componentviewer.config.component_changes.tooltip": "Only non-default components will be displayed.",
+    "componentviewer.config.display": "Display",
     "componentviewer.config.display.always": "Always",
     "componentviewer.config.display.hold": "Hold",
     "componentviewer.config.display.never": "Never",
     "componentviewer.config.display.tooltip": "Specifies the display behavior of components.\n\n- Never: Components will never be displayed\n\n- Hold: Components will be displayed when holding CTRL\n\n- Always: Components will always be displayed",
-    "componentviewer.config.display": "Display",
+    "componentviewer.config.indent_size": "Indent Size",
     "componentviewer.config.indent_size.off": "No Formatting",
     "componentviewer.config.indent_size.tooltip": "The amount of spaces used for indentation. A value of zero means no formatting will occur.",
     "componentviewer.config.indent_size.value": "Indent Size: %s",
-    "componentviewer.config.indent_size": "Indent Size",
+    "componentviewer.config.mode": "Mode",
     "componentviewer.config.mode.class": "Class",
     "componentviewer.config.mode.snbt": "SNBT",
     "componentviewer.config.mode.tooltip": "Specifies the display mode of components.\n\n- SNBT: Using an SNBT representation just like \"/data get\"\n\n- Class: Using Java's built-in representation for classes, records, integers, etc.",
-    "componentviewer.config.mode": "Mode",
     "componentviewer.config.title": "Component Viewer Config",
     "componentviewer.keybind.category": "Component Viewer",
-    "componentviewer.keybind.config": "Open Config Menu",
+    "componentviewer.keybind.config": "Config Screen",
     "componentviewer.tooltips.components.empty.changes": "No Component Changes",
     "componentviewer.tooltips.components.empty.general": "No Components",
     "componentviewer.tooltips.components.error.class_formatting": "Class formatting error: Displaying non-formatted value",
