added config dependencies

--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -1,26 +1,28 @@
 {
-    "componentviewer.config.advanced_tooltips": "Advanced Tooltips",
-    "componentviewer.config.advanced_tooltips.tooltip": "The debug option \"Advanced tooltips\" has to be enabled to display components.",
-    "componentviewer.config.colored_snbt": "Colored SNBT",
-    "componentviewer.config.colored_snbt.tooltip": "Colored SNBT values just like \"/data get\".",
-    "componentviewer.config.component_changes": "Component Changes",
-    "componentviewer.config.component_changes.tooltip": "Only non-default components will be displayed.",
-    "componentviewer.config.component_values": "Component Values",
-    "componentviewer.config.component_values.tooltip": "Component values will be displayed in addition to component types.",
-    "componentviewer.config.display": "Display",
-    "componentviewer.config.display.always": "Always",
-    "componentviewer.config.display.hold": "Hold",
-    "componentviewer.config.display.never": "Never",
-    "componentviewer.config.display.tooltip": "Specifies the display behavior of components.\n\n- Never: Components will never be displayed\n\n- Hold: Components will be displayed when holding CTRL\n\n- Always: Components will always be displayed",
-    "componentviewer.config.indent_size": "Indent Size",
-    "componentviewer.config.indent_size.off": "No Formatting",
-    "componentviewer.config.indent_size.tooltip": "The amount of spaces used for indentation. A value of zero means no formatting will occur.",
-    "componentviewer.config.indent_size.value": "Indent Size: %s",
-    "componentviewer.config.mode": "Mode",
-    "componentviewer.config.mode.class": "Class",
-    "componentviewer.config.mode.snbt": "SNBT",
-    "componentviewer.config.mode.tooltip": "Specifies the display mode of components.\n\n- SNBT: Using an SNBT representation just like \"/data get\"\n\n- Class: Using Java's built-in representation for classes, records, integers, etc.",
     "componentviewer.config.title": "Component Viewer Config",
+    "componentviewer.config.tooltips": "Tooltips...",
+    "componentviewer.config.tooltips.advanced_tooltips": "Advanced Tooltips",
+    "componentviewer.config.tooltips.advanced_tooltips.tooltip": "The debug option \"Advanced tooltips\" has to be enabled to display components.",
+    "componentviewer.config.tooltips.colored_snbt": "Colored SNBT",
+    "componentviewer.config.tooltips.colored_snbt.tooltip": "Colored SNBT values just like \"/data get\".",
+    "componentviewer.config.tooltips.component_changes": "Component Changes",
+    "componentviewer.config.tooltips.component_changes.tooltip": "Only non-default components will be displayed.",
+    "componentviewer.config.tooltips.component_values": "Component Values",
+    "componentviewer.config.tooltips.component_values.tooltip": "Component values will be displayed in addition to component types.",
+    "componentviewer.config.tooltips.display": "Display",
+    "componentviewer.config.tooltips.display.always": "Always",
+    "componentviewer.config.tooltips.display.hold": "Hold",
+    "componentviewer.config.tooltips.display.never": "Never",
+    "componentviewer.config.tooltips.display.tooltip": "Specifies the display behavior of components.\n\n- Never: Components will never be displayed\n\n- Hold: Components will be displayed when holding CTRL\n\n- Always: Components will always be displayed",
+    "componentviewer.config.tooltips.indent_size": "Indent Size",
+    "componentviewer.config.tooltips.indent_size.off": "No Formatting",
+    "componentviewer.config.tooltips.indent_size.tooltip": "The amount of spaces used for indentation. A value of zero means no formatting will occur.",
+    "componentviewer.config.tooltips.indent_size.value": "Indent Size: %s",
+    "componentviewer.config.tooltips.mode": "Mode",
+    "componentviewer.config.tooltips.mode.class": "Class",
+    "componentviewer.config.tooltips.mode.snbt": "SNBT",
+    "componentviewer.config.tooltips.mode.tooltip": "Specifies the display mode of components.\n\n- SNBT: Using an SNBT representation just like \"/data get\"\n\n- Class: Using Java's built-in representation for classes, records, integers, etc.",
+    "componentviewer.config.tooltips.title": "Tooltips",
     "componentviewer.keybind.category": "Component Viewer",
     "componentviewer.keybind.config": "Config Screen",
     "componentviewer.tooltips.components.empty.changes": "No Component Changes",
