--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -14,20 +14,20 @@
     "componentviewer.config.tooltips.display.hold": "Hold",
     "componentviewer.config.tooltips.display.never": "Never",
     "componentviewer.config.tooltips.display.tooltip": "Specifies the display behavior of components.\n\n- Never: Components will never be displayed\n\n- Hold: Components will be displayed when holding CTRL\n\n- Always: Components will always be displayed",
-    "componentviewer.config.tooltips.indent_size": "Indent Size",
-    "componentviewer.config.tooltips.indent_size.off": "No Formatting",
-    "componentviewer.config.tooltips.indent_size.tooltip": "The amount of spaces used for indentation. A value of zero means no formatting will occur.",
-    "componentviewer.config.tooltips.indent_size.value": "Indent Size: %s",
-    "componentviewer.config.tooltips.mode": "Mode",
-    "componentviewer.config.tooltips.mode.class": "Class",
-    "componentviewer.config.tooltips.mode.snbt": "SNBT",
-    "componentviewer.config.tooltips.mode.tooltip": "Specifies the display mode of components.\n\n- SNBT: Using an SNBT representation just like \"/data get\"\n\n- Class: Using Java's built-in representation for classes, records, integers, etc.",
+    "componentviewer.config.tooltips.formatting": "Formatting",
+    "componentviewer.config.tooltips.formatting.object": "Object",
+    "componentviewer.config.tooltips.formatting.snbt": "SNBT",
+    "componentviewer.config.tooltips.formatting.tooltip": "Specifies how component values should be formatted.\n\n- SNBT: Using an SNBT representation just like \"/data get\"\n\n- Object: Using Java's Object.toString() method",
+    "componentviewer.config.tooltips.indentation": "Indentation",
+    "componentviewer.config.tooltips.indentation.off": "No Indentation",
+    "componentviewer.config.tooltips.indentation.tooltip": "The amount of spaces used for indentation. A value of zero means no indentation, essentially creating a one-liner.",
+    "componentviewer.config.tooltips.indentation.value": "Indentation: %s",
     "componentviewer.config.tooltips.title": "Tooltips",
     "componentviewer.keybind.category": "Component Viewer",
     "componentviewer.keybind.config": "Config Screen",
     "componentviewer.tooltips.components.empty.changes": "No Component Changes",
     "componentviewer.tooltips.components.empty.general": "No Components",
-    "componentviewer.tooltips.components.error.class_formatting": "Class formatting error: Displaying non-formatted value",
+    "componentviewer.tooltips.components.error.object_formatting": "Object formatting error: Displaying non-formatted value",
     "componentviewer.tooltips.components.header.changes": "Component Changes:",
     "componentviewer.tooltips.components.header.general": "Components:",
     "componentviewer.tooltips.components.value": "Value:"
