rework of formatters

--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -3,8 +3,8 @@
     "componentviewer.config.tooltips": "Tooltips...",
     "componentviewer.config.tooltips.advanced_tooltips": "Advanced Tooltips",
     "componentviewer.config.tooltips.advanced_tooltips.tooltip": "The debug option \"Advanced tooltips\" has to be enabled to display components.",
-    "componentviewer.config.tooltips.colored_snbt": "Colored SNBT",
-    "componentviewer.config.tooltips.colored_snbt.tooltip": "Colored SNBT values just like \"/data get\".",
+    "componentviewer.config.tooltips.colored_values": "Colored Values",
+    "componentviewer.config.tooltips.colored_values.tooltip": "Component values will be colored.",
     "componentviewer.config.tooltips.component_changes": "Component Changes",
     "componentviewer.config.tooltips.component_changes.tooltip": "Only non-default components will be displayed.",
     "componentviewer.config.tooltips.component_values": "Component Values",
@@ -17,7 +17,7 @@
     "componentviewer.config.tooltips.formatting": "Formatting",
     "componentviewer.config.tooltips.formatting.object": "Object",
     "componentviewer.config.tooltips.formatting.snbt": "SNBT",
-    "componentviewer.config.tooltips.formatting.tooltip": "Specifies how component values should be formatted.\n\n- SNBT: Using an SNBT representation just like \"/data get\"\n\n- Object: Using Java's Object.toString() method",
+    "componentviewer.config.tooltips.formatting.tooltip": "Specifies how component values should be formatted.\n\n- SNBT: Using an SNBT representation just like \"/data get\"\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
     "componentviewer.config.tooltips.indentation": "Indentation",
     "componentviewer.config.tooltips.indentation.off": "No Indentation",
     "componentviewer.config.tooltips.indentation.tooltip": "The amount of spaces used for indentation. A value of zero means no indentation, essentially creating a one-liner.",
