change control flow and much more

--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -1,34 +1,39 @@
 {
     "componentviewer.config.title": "Component Viewer Config",
-    "componentviewer.config.tooltips": "Tooltips...",
-    "componentviewer.config.tooltips.advanced_tooltips": "Advanced Tooltips",
-    "componentviewer.config.tooltips.advanced_tooltips.tooltip": "The debug option \"Advanced tooltips\" has to be enabled to display components.",
-    "componentviewer.config.tooltips.colored_values": "Colored Values",
-    "componentviewer.config.tooltips.colored_values.tooltip": "Component values will be colored.",
-    "componentviewer.config.tooltips.component_changes": "Component Changes",
-    "componentviewer.config.tooltips.component_changes.tooltip": "Only non-default components will be displayed.",
-    "componentviewer.config.tooltips.component_values": "Component Values",
-    "componentviewer.config.tooltips.component_values.tooltip": "Component values will be displayed in addition to component types.",
-    "componentviewer.config.tooltips.display": "Display",
-    "componentviewer.config.tooltips.display.always": "Always",
-    "componentviewer.config.tooltips.display.hold": "Hold",
-    "componentviewer.config.tooltips.display.never": "Never",
-    "componentviewer.config.tooltips.display.tooltip": "Specifies the display behavior of components.\n\n- Never: Components will never be displayed\n\n- Hold: Components will be displayed when holding CTRL\n\n- Always: Components will always be displayed",
-    "componentviewer.config.tooltips.formatting": "Formatting",
-    "componentviewer.config.tooltips.formatting.object": "Object",
-    "componentviewer.config.tooltips.formatting.snbt": "SNBT",
-    "componentviewer.config.tooltips.formatting.tooltip": "Specifies how component values should be formatted.\n\n- SNBT: Using an SNBT representation just like \"/data get\"\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
-    "componentviewer.config.tooltips.indentation": "Indentation",
-    "componentviewer.config.tooltips.indentation.off": "No Indentation",
-    "componentviewer.config.tooltips.indentation.tooltip": "The amount of spaces used for indentation. A value of zero means no indentation, essentially creating a one-liner.",
-    "componentviewer.config.tooltips.indentation.value": "Indentation: %s",
-    "componentviewer.config.tooltips.title": "Tooltips",
+    "componentviewer.config.tooltip": "Tooltips...",
+    "componentviewer.config.tooltip.advanced_tooltips": "Advanced Tooltips",
+    "componentviewer.config.tooltip.advanced_tooltips.description": "The debug option \"Advanced tooltips\" has to be enabled to display components.",
+    "componentviewer.config.tooltip.colored_values": "Colored Values",
+    "componentviewer.config.tooltip.colored_values.description": "Component values will be colored.",
+    "componentviewer.config.tooltip.component_values": "Component Values",
+    "componentviewer.config.tooltip.component_values.description": "Component values will be displayed in addition to component types.",
+    "componentviewer.config.tooltip.components": "Components",
+    "componentviewer.config.tooltip.components.all": "All",
+    "componentviewer.config.tooltip.components.changes": "Changes",
+    "componentviewer.config.tooltip.components.default": "Default",
+    "componentviewer.config.tooltip.components.description": "Which components will be listed.\n\n- All: All components currently present on the item stack\n\n- Default: All components that default to the item stack\n\n- Changes: All components that have been added, modified or removed",
+    "componentviewer.config.tooltip.display": "Display",
+    "componentviewer.config.tooltip.display.always": "Always",
+    "componentviewer.config.tooltip.display.description": "Specifies the display behavior of components.\n\n- Never: Components will never be displayed\n\n- Hold: Components will be displayed when holding CTRL\n\n- Always: Components will always be displayed",
+    "componentviewer.config.tooltip.display.hold": "Hold",
+    "componentviewer.config.tooltip.display.never": "Never",
+    "componentviewer.config.tooltip.formatting": "Formatting",
+    "componentviewer.config.tooltip.formatting.description": "Specifies how component values should be formatted.\n\n- SNBT: Using an SNBT representation just like \"/data get\"\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
+    "componentviewer.config.tooltip.formatting.object": "Object",
+    "componentviewer.config.tooltip.formatting.snbt": "SNBT",
+    "componentviewer.config.tooltip.indentation": "Indentation",
+    "componentviewer.config.tooltip.indentation.description": "The amount of spaces used for indentation. A value of zero means no indentation, essentially creating a one-liner.",
+    "componentviewer.config.tooltip.indentation.off": "No Indentation",
+    "componentviewer.config.tooltip.indentation.value": "Indentation: %s",
+    "componentviewer.config.tooltip.title": "Tooltips",
     "componentviewer.keybind.category": "Component Viewer",
     "componentviewer.keybind.config": "Config Screen",
-    "componentviewer.tooltips.components.empty.changes": "No Component Changes",
-    "componentviewer.tooltips.components.empty.general": "No Components",
-    "componentviewer.tooltips.components.error.object_formatting": "Object formatting error: Displaying non-formatted value",
-    "componentviewer.tooltips.components.header.changes": "Component Changes:",
-    "componentviewer.tooltips.components.header.general": "Components:",
-    "componentviewer.tooltips.components.value": "Value:"
+    "componentviewer.tooltip.component.selection.all": "Components:",
+    "componentviewer.tooltip.component.selection.all.empty": "No Components",
+    "componentviewer.tooltip.component.selection.changes": "Component Changes:",
+    "componentviewer.tooltip.component.selection.changes.empty": "No Component Changes",
+    "componentviewer.tooltip.component.selection.default": "Default Components:",
+    "componentviewer.tooltip.component.selection.default.empty": "No Default Component",
+    "componentviewer.tooltip.component.value": "Value:",
+    "componentviewer.tooltip.component.value.formatting_exception": "Formatting error: Try another formatting method"
 }
