add most configs for copying

--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -1,8 +1,29 @@
 {
     "componentviewer.config.title": "Component Viewer Config",
+    "componentviewer.config.clipboard": "Clipboard...",
+    "componentviewer.config.clipboard.copy": "Copy",
+    "componentviewer.config.clipboard.copy.component_value": "Component Value",
+    "componentviewer.config.clipboard.copy.description": "What should be copied to the clipboard.\n\n- Disabled: Nothing\n\n- Component Value: The currently selected component value\n\n- Give Command: A give command yielding the item stack you are currently hovering over",
+    "componentviewer.config.clipboard.copy.disabled": "Disabled",
+    "componentviewer.config.clipboard.copy.give_command": "Give Command",
+    "componentviewer.config.clipboard.formatting": "Formatting",
+    "componentviewer.config.clipboard.formatting.description": "The formatting of the copied component value.\n\n- Sync: The same as for tooltips\n\n- SNBT: Using an SNBT representation just like '/data get'\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
+    "componentviewer.config.clipboard.formatting.object": "Object",
+    "componentviewer.config.clipboard.formatting.snbt": "SNBT",
+    "componentviewer.config.clipboard.formatting.sync": "Sync",
+    "componentviewer.config.clipboard.include_count": "Include Count",
+    "componentviewer.config.clipboard.include_count.description": "Whether to copy the item count of the item stack.",
+    "componentviewer.config.clipboard.indentation": "Indentation",
+    "componentviewer.config.clipboard.indentation.description": "The amount of spaces used for indentation. A value of zero means no indentation, essentially creating a one-liner. 'Sync' copies the indentation behavior of tooltips.",
+    "componentviewer.config.clipboard.indentation.off": "No Indentation",
+    "componentviewer.config.clipboard.indentation.sync": "Indentation: Sync",
+    "componentviewer.config.clipboard.indentation.value": "Indentation: %s",
+    "componentviewer.config.clipboard.prepend_slash": "Prepend Slash",
+    "componentviewer.config.clipboard.prepend_slash.description": "Add a '/' in front of the give command.",
+    "componentviewer.config.clipboard.title": "Clipboard",
     "componentviewer.config.tooltip": "Tooltips...",
     "componentviewer.config.tooltip.advanced_tooltips": "Advanced Tooltips",
-    "componentviewer.config.tooltip.advanced_tooltips.description": "The debug option \"Advanced tooltips\" has to be enabled to display components.",
+    "componentviewer.config.tooltip.advanced_tooltips.description": "The debug option 'Advanced tooltips' has to be enabled to display components.",
     "componentviewer.config.tooltip.colored_values": "Colored Values",
     "componentviewer.config.tooltip.colored_values.description": "Component values will be colored.",
     "componentviewer.config.tooltip.component_values": "Component Values",
@@ -18,7 +39,7 @@
     "componentviewer.config.tooltip.display.hold": "Hold",
     "componentviewer.config.tooltip.display.never": "Never",
     "componentviewer.config.tooltip.formatting": "Formatting",
-    "componentviewer.config.tooltip.formatting.description": "Specifies how component values should be formatted.\n\n- SNBT: Using an SNBT representation just like \"/data get\"\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
+    "componentviewer.config.tooltip.formatting.description": "Specifies how component values should be formatted.\n\n- SNBT: Using an SNBT representation just like '/data get'\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
     "componentviewer.config.tooltip.formatting.object": "Object",
     "componentviewer.config.tooltip.formatting.snbt": "SNBT",
     "componentviewer.config.tooltip.indentation": "Indentation",
