add json formatting

--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -7,7 +7,8 @@
     "componentviewer.config.clipboard.copy.disabled": "Disabled",
     "componentviewer.config.clipboard.copy.give_command": "Give Command",
     "componentviewer.config.clipboard.formatting": "Formatting",
-    "componentviewer.config.clipboard.formatting.description": "The formatting of the copied component value.\n\n- Sync: The same as for tooltips\n\n- SNBT: Using an SNBT representation just like '/data get'\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
+    "componentviewer.config.clipboard.formatting.description": "The formatting of the copied component value.\n\n- Sync: The same as for tooltips\n\n- SNBT: Using an SNBT representation just like '/data get'\n\n- JSON: Represented as a JSON object\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
+    "componentviewer.config.clipboard.formatting.json": "JSON",
     "componentviewer.config.clipboard.formatting.object": "Object",
     "componentviewer.config.clipboard.formatting.snbt": "SNBT",
     "componentviewer.config.clipboard.formatting.sync": "Sync",
@@ -39,7 +40,8 @@
     "componentviewer.config.tooltip.display.hold": "Hold",
     "componentviewer.config.tooltip.display.never": "Never",
     "componentviewer.config.tooltip.formatting": "Formatting",
-    "componentviewer.config.tooltip.formatting.description": "Specifies how component values should be formatted.\n\n- SNBT: Using an SNBT representation just like '/data get'\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
+    "componentviewer.config.tooltip.formatting.description": "Specifies how component values should be formatted.\n\n- SNBT: Using an SNBT representation just like '/data get'\n\n- JSON: Represented as a JSON object\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
+    "componentviewer.config.tooltip.formatting.json": "JSON",
     "componentviewer.config.tooltip.formatting.object": "Object",
     "componentviewer.config.tooltip.formatting.snbt": "SNBT",
     "componentviewer.config.tooltip.indentation": "Indentation",
