add basic toast notification when copying

--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -51,6 +51,11 @@
     "componentviewer.config.tooltip.title": "Tooltips",
     "componentviewer.keybind.category": "Component Viewer",
     "componentviewer.keybind.config": "Config Screen",
+    "componentviewer.notification.toast.copy.failure": "Failed to Copy!",
+    "componentviewer.notification.toast.copy.success": "Copied Successfully!",
+    "componentviewer.notification.toast.copy.type.component_value": "Component Value",
+    "componentviewer.notification.toast.copy.type.formatting_exception": "Formatting Error",
+    "componentviewer.notification.toast.copy.type.give_command": "Give Command",
     "componentviewer.tooltip.component.selection.all": "Components:",
     "componentviewer.tooltip.component.selection.all.empty": "No Components",
     "componentviewer.tooltip.component.selection.changes": "Component Changes:",
