Add keybinds for toggling enum configs

--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -51,8 +51,14 @@
     "componentviewer.config.tooltip.indentation.off": "No Indentation",
     "componentviewer.config.tooltip.indentation.value": "Indentation: %s",
     "componentviewer.config.tooltip.title": "Tooltips",
-    "componentviewer.keybind.category": "Component Viewer",
-    "componentviewer.keybind.config": "Config Screen",
+    "componentviewer.keybind.config": "Component Viewer - Configs",
+    "componentviewer.keybind.config.clipboard_copy": "Clipboard / Copy",
+    "componentviewer.keybind.config.clipboard_formatting": "Clipboard / Formatting",
+    "componentviewer.keybind.config.tooltip_components": "Tooltips / Components",
+    "componentviewer.keybind.config.tooltip_display": "Tooltips / Display",
+    "componentviewer.keybind.config.tooltip_formatting": "Tooltips / Formatting",
+    "componentviewer.keybind.general": "Component Viewer",
+    "componentviewer.keybind.general.config_screen": "Config Screen",
     "componentviewer.notification.toast.copy.failure": "Failed to Copy!",
     "componentviewer.notification.toast.copy.success": "Copied Successfully!",
     "componentviewer.notification.toast.copy.type.component_value": "Component Value",
