Add item stack display and copy
This should:
- Close #5
- Close #10

--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -3,11 +3,12 @@
     "componentviewer.config.clipboard": "Clipboard...",
     "componentviewer.config.clipboard.copy": "Copy",
     "componentviewer.config.clipboard.copy.component_value": "Component Value",
-    "componentviewer.config.clipboard.copy.description": "What should be copied to the clipboard.\n\n- Disabled: Nothing\n\n- Component Value: The currently selected component value\n\n- Give Command: A give command yielding the item stack you are currently hovering over",
+    "componentviewer.config.clipboard.copy.description": "What should be copied to the clipboard.\n\n- Component Value: The currently selected component value\n\n- Item Stack: The item stack data\n\n- Give Command: A give command yielding the item stack you are currently hovering over\n\n- Disabled: Nothing",
     "componentviewer.config.clipboard.copy.disabled": "Disabled",
     "componentviewer.config.clipboard.copy.give_command": "Give Command",
+    "componentviewer.config.clipboard.copy.item_stack": "Item Stack",
     "componentviewer.config.clipboard.formatting": "Formatting",
-    "componentviewer.config.clipboard.formatting.description": "The formatting of the copied component value.\n\n- Sync: The same as for tooltips\n\n- SNBT: Using an SNBT representation just like '/data get'\n\n- JSON: Represented as a JSON object\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
+    "componentviewer.config.clipboard.formatting.description": "The formatting of the copied value.\n\n- Sync: The same as for tooltips\n\n- SNBT: Using an SNBT representation just like '/data get'\n\n- JSON: Represented as a JSON object\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
     "componentviewer.config.clipboard.formatting.json": "JSON",
     "componentviewer.config.clipboard.formatting.object": "Object",
     "componentviewer.config.clipboard.formatting.snbt": "SNBT",
@@ -27,8 +28,8 @@
     "componentviewer.config.tooltip": "Tooltips...",
     "componentviewer.config.tooltip.advanced_tooltips": "Advanced Tooltips",
     "componentviewer.config.tooltip.advanced_tooltips.description": "The debug option 'Advanced tooltips' has to be enabled to display components.",
-    "componentviewer.config.tooltip.colored_values": "Colored Values",
-    "componentviewer.config.tooltip.colored_values.description": "Component values will be colored.",
+    "componentviewer.config.tooltip.colored_formatting": "Colored Formatting",
+    "componentviewer.config.tooltip.colored_formatting.description": "Formatted values (e.g. component values) will be colored.",
     "componentviewer.config.tooltip.component_values": "Component Values",
     "componentviewer.config.tooltip.component_values.description": "Component values will be displayed in addition to component types.",
     "componentviewer.config.tooltip.components": "Components",
@@ -38,11 +39,11 @@
     "componentviewer.config.tooltip.components.description": "Which components will be listed.\n\n- All: All components currently present on the item stack\n\n- Default: All components that default to the item stack\n\n- Changes: All components that have been added, modified or removed",
     "componentviewer.config.tooltip.display": "Display",
     "componentviewer.config.tooltip.display.always": "Always",
-    "componentviewer.config.tooltip.display.description": "Specifies the display behavior of components.\n\n- Never: Components will never be displayed\n\n- Hold: Components will be displayed when holding CTRL\n\n- Always: Components will always be displayed",
+    "componentviewer.config.tooltip.display.description": "Specifies the display behavior of added tooltip information.\n\n- Hold: Information will be displayed when holding CTRL\n\n- Always: Information will always be displayed\n\n- Never: Information will never be displayed",
     "componentviewer.config.tooltip.display.hold": "Hold",
     "componentviewer.config.tooltip.display.never": "Never",
     "componentviewer.config.tooltip.formatting": "Formatting",
-    "componentviewer.config.tooltip.formatting.description": "Specifies how component values should be formatted.\n\n- SNBT: Using an SNBT representation just like '/data get'\n\n- JSON: Represented as a JSON object\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
+    "componentviewer.config.tooltip.formatting.description": "Specifies how values will be formatted.\n\n- SNBT: Using an SNBT representation similar to '/data get'\n\n- JSON: Represented as a JSON object\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
     "componentviewer.config.tooltip.formatting.json": "JSON",
     "componentviewer.config.tooltip.formatting.object": "Object",
     "componentviewer.config.tooltip.formatting.snbt": "SNBT",
@@ -50,6 +51,10 @@
     "componentviewer.config.tooltip.indentation.description": "The amount of spaces used for indentation. A value of zero means no indentation, essentially creating a one-liner.",
     "componentviewer.config.tooltip.indentation.off": "No Indentation",
     "componentviewer.config.tooltip.indentation.value": "Indentation: %s",
+    "componentviewer.config.tooltip.purpose": "Purpose",
+    "componentviewer.config.tooltip.purpose.components": "Components",
+    "componentviewer.config.tooltip.purpose.description": "Whats the purpose of tooltips.\n\n- Components: Display individual components of the item stack\n\n- Item Stack: Display the item stack itself. This is exactly the same as using '/data get' on the item stack",
+    "componentviewer.config.tooltip.purpose.item_stack": "Item Stack",
     "componentviewer.config.tooltip.title": "Tooltips",
     "componentviewer.keybind.config": "Component Viewer - Configs",
     "componentviewer.keybind.config.clipboard_copy": "Clipboard / Copy",
@@ -57,19 +62,22 @@
     "componentviewer.keybind.config.tooltip_components": "Tooltips / Components",
     "componentviewer.keybind.config.tooltip_display": "Tooltips / Display",
     "componentviewer.keybind.config.tooltip_formatting": "Tooltips / Formatting",
+    "componentviewer.keybind.config.tooltip_purpose": "Tooltips / Purpose",
     "componentviewer.keybind.general": "Component Viewer",
     "componentviewer.keybind.general.config_screen": "Config Screen",
     "componentviewer.notification.toast.copy.failure": "Failed to Copy!",
     "componentviewer.notification.toast.copy.success": "Copied Successfully!",
     "componentviewer.notification.toast.copy.type.component_value": "Component Value",
-    "componentviewer.notification.toast.copy.type.formatting_exception": "Formatting Error",
+    "componentviewer.notification.toast.copy.type.formatting_exception": "Formatting Exception",
     "componentviewer.notification.toast.copy.type.give_command": "Give Command",
-    "componentviewer.tooltip.component.selection.all": "Components:",
-    "componentviewer.tooltip.component.selection.all.empty": "No Components",
-    "componentviewer.tooltip.component.selection.changes": "Component Changes:",
-    "componentviewer.tooltip.component.selection.changes.empty": "No Component Changes",
-    "componentviewer.tooltip.component.selection.default": "Default Components:",
-    "componentviewer.tooltip.component.selection.default.empty": "No Default Component",
-    "componentviewer.tooltip.component.value": "Value:",
-    "componentviewer.tooltip.component.value.formatting_exception": "Formatting error: Try another formatting method"
+    "componentviewer.notification.toast.copy.type.item_stack": "Item Stack",
+    "componentviewer.tooltip.purpose.components.selection.all": "Components:",
+    "componentviewer.tooltip.purpose.components.selection.all.empty": "No Components",
+    "componentviewer.tooltip.purpose.components.selection.changes": "Component Changes:",
+    "componentviewer.tooltip.purpose.components.selection.changes.empty": "No Component Changes",
+    "componentviewer.tooltip.purpose.components.selection.default": "Default Components:",
+    "componentviewer.tooltip.purpose.components.selection.default.empty": "No Default Component",
+    "componentviewer.tooltip.purpose.components.value": "Value:",
+    "componentviewer.tooltip.purpose.item_stack": "Item Stack:",
+    "componentviewer.tooltip.formatting_exception": ">> Formatting Exception"
 }
