--- a/src/main/resources/assets/componentviewer/lang/en_us.json
+++ b/src/main/resources/assets/componentviewer/lang/en_us.json
@@ -3,57 +3,57 @@
     "componentviewer.config.clipboard": "Clipboard...",
     "componentviewer.config.clipboard.copy": "Copy",
     "componentviewer.config.clipboard.copy.component_value": "Component Value",
-    "componentviewer.config.clipboard.copy.description": "What should be copied to the clipboard.\n\n- Component Value: The currently selected component value\n\n- Item Stack: The item stack data\n\n- Give Command: A give command yielding the item stack you are currently hovering over\n\n- Disabled: Nothing",
+    "componentviewer.config.clipboard.copy.description": "What will be copied to the clipboard on `CTRL + C`.\n\n- Component Value: The value of the currently selected component\n\n- Item Stack: The item stack data\n\n- Give Command: A give command yielding the exact item stack\n\n- Disabled",
     "componentviewer.config.clipboard.copy.disabled": "Disabled",
     "componentviewer.config.clipboard.copy.give_command": "Give Command",
     "componentviewer.config.clipboard.copy.item_stack": "Item Stack",
     "componentviewer.config.clipboard.formatting": "Formatting",
-    "componentviewer.config.clipboard.formatting.description": "The formatting of the copied value.\n\n- Sync: The same as for tooltips\n\n- SNBT: Using an SNBT representation just like '/data get'\n\n- JSON: Represented as a JSON object\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
+    "componentviewer.config.clipboard.formatting.description": "How copied data will be formatted.\n\n- Sync: The same as for tooltips\n\n- SNBT\n\n- JSON\n\n- Object: Using Java's Object.toString() method. SNBT formatting will still be used for nbt components",
     "componentviewer.config.clipboard.formatting.json": "JSON",
     "componentviewer.config.clipboard.formatting.object": "Object",
     "componentviewer.config.clipboard.formatting.snbt": "SNBT",
     "componentviewer.config.clipboard.formatting.sync": "Sync",
     "componentviewer.config.clipboard.include_count": "Include Count",
-    "componentviewer.config.clipboard.include_count.description": "Whether to copy the item count of the item stack.",
+    "componentviewer.config.clipboard.include_count.description": "Include the count of the item stack in the give command.",
     "componentviewer.config.clipboard.indentation": "Indentation",
-    "componentviewer.config.clipboard.indentation.description": "The amount of spaces used for indentation. A value of zero means no indentation, essentially creating a one-liner. 'Sync' copies the indentation behavior of tooltips.",
+    "componentviewer.config.clipboard.indentation.description": "The amount of spaces used for indentation when formatting. 'No Indentation' will result in a one-liner. 'Sync' copies the indentation behavior of tooltips.",
     "componentviewer.config.clipboard.indentation.off": "No Indentation",
     "componentviewer.config.clipboard.indentation.sync": "Indentation: Sync",
     "componentviewer.config.clipboard.indentation.value": "Indentation: %s",
     "componentviewer.config.clipboard.prepend_slash": "Prepend Slash",
-    "componentviewer.config.clipboard.prepend_slash.description": "Add a '/' in front of the give command.",
+    "componentviewer.config.clipboard.prepend_slash.description": "Add a `/` in front of the give command.",
     "componentviewer.config.clipboard.success_notification": "Success Notification",
-    "componentviewer.config.clipboard.success_notification.description": "Receive toast notifications for successful copy actions. You will always receive toast notifications for failed copy actions, regardless of this config.",
+    "componentviewer.config.clipboard.success_notification.description": "Receive toast notifications for successful copy actions. You will always receive toast notifications for failed copy actions, regardless of this setting.",
     "componentviewer.config.clipboard.title": "Clipboard",
     "componentviewer.config.tooltip": "Tooltips...",
     "componentviewer.config.tooltip.advanced_tooltips": "Advanced Tooltips",
-    "componentviewer.config.tooltip.advanced_tooltips.description": "The debug option 'Advanced tooltips' has to be enabled to display components.",
+    "componentviewer.config.tooltip.advanced_tooltips.description": "The debug option 'Advanced tooltips' must be enabled to display information.",
     "componentviewer.config.tooltip.colored_formatting": "Colored Formatting",
-    "componentviewer.config.tooltip.colored_formatting.description": "Formatted values (e.g. component values) will be colored.",
+    "componentviewer.config.tooltip.colored_formatting.description": "Formatted data (e.g. component values) will be colored.",
     "componentviewer.config.tooltip.component_values": "Component Values",
-    "componentviewer.config.tooltip.component_values.description": "Component values will be displayed in addition to component types.",
+    "componentviewer.config.tooltip.component_values.description": "Component values will be displayed in addition to namespaced component ids.",
     "componentviewer.config.tooltip.components": "Components",
     "componentviewer.config.tooltip.components.all": "All",
     "componentviewer.config.tooltip.components.changes": "Changes",
     "componentviewer.config.tooltip.components.default": "Default",
-    "componentviewer.config.tooltip.components.description": "Which components will be listed.\n\n- All: All components currently present on the item stack\n\n- Default: All components that default to the item stack\n\n- Changes: All components that have been added, modified or removed",
+    "componentviewer.config.tooltip.components.description": "Which components will be displayed.\n\n- All: Components currently present on the item stack\n\n- Default: Components that default to the item stack\n\n- Changes: Components that have been added, modified or removed",
     "componentviewer.config.tooltip.display": "Display",
     "componentviewer.config.tooltip.display.always": "Always",
-    "componentviewer.config.tooltip.display.description": "Specifies the display behavior of added tooltip information.\n\n- Hold: Information will be displayed when holding CTRL\n\n- Always: Information will always be displayed\n\n- Never: Information will never be displayed",
+    "componentviewer.config.tooltip.display.description": "When to display the information of this mod.\n\n- Hold: When holding `CTRL`\n\n- Always\n\n- Never",
     "componentviewer.config.tooltip.display.hold": "Hold",
     "componentviewer.config.tooltip.display.never": "Never",
     "componentviewer.config.tooltip.formatting": "Formatting",
-    "componentviewer.config.tooltip.formatting.description": "Specifies how values will be formatted.\n\n- SNBT: Using an SNBT representation similar to '/data get'\n\n- JSON: Represented as a JSON object\n\n- Object: Using Java's Object.toString() method. SNBT formatting is used for components of type NbtComponent",
+    "componentviewer.config.tooltip.formatting.description": "How displayed data will be formatted.\n\n- SNBT\n\n- JSON\n\n- Object: Using Java's Object.toString() method. SNBT formatting will still be used for nbt components",
     "componentviewer.config.tooltip.formatting.json": "JSON",
     "componentviewer.config.tooltip.formatting.object": "Object",
     "componentviewer.config.tooltip.formatting.snbt": "SNBT",
     "componentviewer.config.tooltip.indentation": "Indentation",
-    "componentviewer.config.tooltip.indentation.description": "The amount of spaces used for indentation. A value of zero means no indentation, essentially creating a one-liner.",
+    "componentviewer.config.tooltip.indentation.description": "The amount of spaces used for indentation when formatting. 'No Indentation' will result in a one-liner.",
     "componentviewer.config.tooltip.indentation.off": "No Indentation",
     "componentviewer.config.tooltip.indentation.value": "Indentation: %s",
     "componentviewer.config.tooltip.purpose": "Purpose",
     "componentviewer.config.tooltip.purpose.components": "Components",
-    "componentviewer.config.tooltip.purpose.description": "Whats the purpose of tooltips.\n\n- Components: Display individual components of the item stack\n\n- Item Stack: Display the item stack itself. This is exactly the same as using '/data get' on the item stack",
+    "componentviewer.config.tooltip.purpose.description": "Whats the purpose of tooltips.\n\n- Components: Display individual components of an item stack\n\n- Item Stack: Display the item stack data. This is exactly the same as using `/data get` on the item stack",
     "componentviewer.config.tooltip.purpose.item_stack": "Item Stack",
     "componentviewer.config.tooltip.title": "Tooltips",
     "componentviewer.keybind.config": "Component Viewer - Configs",
@@ -64,7 +64,7 @@
     "componentviewer.keybind.config.tooltip_formatting": "Tooltips / Formatting",
     "componentviewer.keybind.config.tooltip_purpose": "Tooltips / Purpose",
     "componentviewer.keybind.general": "Component Viewer",
-    "componentviewer.keybind.general.config_screen": "Config Screen",
+    "componentviewer.keybind.general.config_screen": "Configs",
     "componentviewer.notification.toast.copy.failure": "Failed to Copy!",
     "componentviewer.notification.toast.copy.success": "Copied Successfully!",
     "componentviewer.notification.toast.copy.type.component_value": "Component Value",
